service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-site-service
  namespace: kylian-exo-bonus1
spec:
  type: ClusterIP
  selector:
    app: mon-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
